Fix margin and alignment

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,11 @@ body{
     color: #3608db;    
 }
 
+
 .info {
     text-align: center;
-    margin-bottom: 0.1em;
+    max-width: 50%;
+    margin: 0 auto;
 }
 
 h1 {
